chore: update plugin-llms

--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -52,8 +52,8 @@ function getCustomMDXComponent() {
         {/* [!code highlight:4] */}
         <LlmsContainer>
           <LlmsCopyButton />
-          <LlmsViewOptions />{' '}
           {/* LlmsViewOptions component can be added as needed  */}
+          <LlmsViewOptions />
         </LlmsContainer>
       </>
     );
