--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -52,7 +52,8 @@ function getCustomMDXComponent() {
         {/* [!code highlight:4] */}
         <LlmsContainer>
           <LlmsCopyButton />
-          <LlmsViewOptions /> {/* LlmsViewOptions 组件可根据需要添加  */}
+          {/* LlmsViewOptions 组件可根据需要添加  */}
+          <LlmsViewOptions />
         </LlmsContainer>
       </>
     );
