--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -287,11 +287,17 @@ interface LlmsViewOptionsProps
   options?: Array<
     | {
         title: string;
-        href: string;
-        icon: React.ReactNode;
+        icon?: React.ReactNode;
+        onClick?: () => void;
       }
-    | 'claude'
+    | {
+        title: string;
+        icon?: React.ReactNode;
+        href: string;
+      }
+    | 'markdownLink'
     | 'chatgpt'
+    | 'claude'
   >;
   textByLang?: Record<string, string>;
   text?: string;
@@ -301,9 +307,9 @@ interface LlmsViewOptionsProps
 #### options
 
 - **Type**: `Array<{ title: string; href: string; icon: React.ReactNode } | 'claude' | 'chatgpt'>`
-- **Default**: `['chatgpt', 'claude']`
+- **Default**: `['markdownLink', 'chatgpt', 'claude']`
 
-Customize the options in the dropdown menu, supports [ChatGPT](https://chatgpt.com/) and [Claude](https://claude.ai) by default.
+Customize the options in the dropdown menu, supports "Copy Markdown Link", [ChatGPT](https://chatgpt.com/) and [Claude](https://claude.ai) by default.
 
 #### textByLang
 
