--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -282,17 +282,24 @@ interface LlmsCopyButtonProps
 - **类型**：`LlmsViewOptionsProps`
 
 ```ts
+type Option =
+  | {
+      title: string;
+      icon?: React.ReactNode;
+      onClick?: () => void;
+    }
+  | {
+      title: string;
+      href: string;
+      icon?: React.ReactNode;
+    }
+  | 'markdownLink'
+  | 'chatgpt'
+  | 'claude';
+
 interface LlmsViewOptionsProps
   extends React.ButtonHTMLAttributes<HTMLButtonElement> {
-  options?: Array<
-    | {
-        title: string;
-        href: string;
-        icon: React.ReactNode;
-      }
-    | 'claude'
-    | 'chatgpt'
-  >;
+  options?: Option[];
   textByLang?: Record<string, string>;
   text?: string;
 }
@@ -300,10 +307,28 @@ interface LlmsViewOptionsProps
 
 #### options
 
-- **类型**：`Array<{ title: string; href: string; icon: React.ReactNode } | 'claude' | 'chatgpt'>`
-- **默认值**：`['chatgpt', 'claude']`
+- **类型**：`Option[]`
 
-自定义下拉菜单中的选项，默认支持 [Chatgpt](https://chatgpt.com/) 和 [Claude](https://claude.ai)。
+```ts
+type Option =
+  | {
+      title: string;
+      icon?: React.ReactNode;
+      onClick?: () => void;
+    }
+  | {
+      title: string;
+      href: string;
+      icon?: React.ReactNode;
+    }
+  | 'markdownLink'
+  | 'chatgpt'
+  | 'claude';
+```
+
+- **默认值**：`['markdownLink', 'chatgpt', 'claude']`
+
+自定义下拉菜单中的选项，默认支持 “复制 Markdown 链接”、[Chatgpt](https://chatgpt.com/) 和 [Claude](https://claude.ai)。
 
 #### textByLang
 
